k8s/apps/backend/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: utterai-api
  labels:
    app.kubernetes.io/part-of: utterai
