k8s/apps/backend/overlays/dev/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utterai-api-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: utterai-dev
